[project]
name = "leetnotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
leetnotes = "leetnotes.main:app"

[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]